onprem-app/k8s/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: onprem-zta
spec:
  mtls:
    mode: STRICT
