onprem-app/k8s/service-a-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: onprem-zta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: service-a
          image: onprem-app-service-a:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
