onprem-app/k8s/service-b-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: onprem-zta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: service-b
          image: onprem-app-service-b:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
